# cardealerdp

./: .releaserc.json  @configure.ts  @generate.ts  CONTRIBUTING.md  README.md  generate-python.ts  generate.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepare.ts  test.json
.github/workflows/: general.yaml
extension/: README.md  astro.config.ts  markdoc.config.ts  package.json  profile.json
extension/assets/: styles.css
extension/components/: SocialIcons.astro
extension/content/docs/: index.mdx
extension/content/docs/extension/: metadata.md  profile.md
extension/content/docs/overview/: contributing.md  examples.md  format.md  getting-started.md  introduction.md  software.md  software.mdoc
extension/content/docs/specification/: metadata.md
extension/schemas/: car.json  dealer.json  showroom.json
extension/scripts/: build-profile.js  build.ts
profile/: build.ts  package.json
profile/models/: package.ts  profile.ts  resource.ts
profile/profile/: package.yaml  profile.json  profile.yaml  resource.yaml
profile/profile/schemas/: car.json  car.yaml
profile/schemas/: car.ts
profile/scripts/: build.ts
profile/source/: package.ts  profile.json
profile/source/resource/: car.ts
sdk-py/: package.json  pyproject.toml
sdk-py/cardealerdp/: __init__.py  profile.py
sdk-py/cardealerdp/schemas/: __init__.py  car.py  showroom.py
sdk-ts/: example.ts  index.ts  index2.ts  package.json  profile.ts
sdk-ts/schemas/: car.ts  dealer.ts  index.ts  showroom.ts
tasks/: bootstrap.ts  build.ts  configure.ts  generate.ts  setup.ts
(+5 files in other folders)
