[project]
name = "cardealerdp"
version = "0.1.0"
description = "Cardealer DP (Car Dealer Data Package) is a data exchange format for car dealerships. It is developed on top of the Data Package standard"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Libraries :: Python Modules" ]
dependencies = [ "dplib>=1.1" ]

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"